midnight/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: midnight
  labels:
    project: midnight-curator
