midnight/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: whisparr
  namespace: midnight
  labels:
    app: whisparr
    project: midnight-curator
spec:
  type: ClusterIP
  selector:
    app: whisparr
  ports:
  - name: whisparr-http
    protocol: TCP
    port: 80
    targetPort: 6969
---
apiVersion: v1
kind: Service
metadata:
  name: stash
  namespace: midnight
  labels:
    app: stash
    project: midnight-curator
spec:
  type: ClusterIP
  selector:
    app: stash
  ports:
  - name: stash-http
    protocol: TCP
    port: 80
    targetPort: 9999
